WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277899
Object.keys(global) includes non-enumerable properties unless delete'd first
https://bugs.webkit.org/show_bug.cgi?id=277899
Summary
Object.keys(global) includes non-enumerable properties unless delete'd first
Meghan Denny
Reported
2024-08-10 01:29:19 PDT
Discovered on Safari Version 17.5 (19618.2.12.11.6) \> Object.keys(globalThis).includes("setInterval") \< true \> const d = Object.getOwnPropertyDescriptor(globalThis, "setInterval"); \> d.enumerable = false; \> Object.defineProperty(globalThis, "setInterval", d); \> Object.getOwnPropertyDescriptor(globalThis, "setInterval").enumerable \< false \> Object.keys(globalThis).includes("setInterval") \< true the final call should return false. am unable to reproduce in Chrome Version 129.0.6647.0. am unable to reproduce in Firefox 129.0. am unable to reproduce with values that are not globalThis.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-17 01:30:21 PDT
<
rdar://problem/134121649
>
Keith Miller
Comment 2
2024-08-20 10:01:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32462
EWS
Comment 3
2024-08-21 03:36:15 PDT
Committed
282554@main
(eed6352f9b23): <
https://commits.webkit.org/282554@main
> Reviewed commits have been landed. Closing PR #32462 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug