Source/JavaScriptCore/runtime/JSObjectInlines.h
@@ -810,6 +810,7 @@ ALWAYS_INLINE void JSObject::getNonReifiedStaticPropertyNames(VM& vm, PropertyNa
     if (staticPropertiesReified())
         return;
 
+    Structure* structure = this->structure();
     // Add properties from the static hashtables of properties
     for (const ClassInfo* info = classInfo(); info; info = info->parentClass) {
         const HashTable* table = info->staticPropHashTable;
@@ -817,8 +818,15 @@ ALWAYS_INLINE void JSObject::getNonReifiedStaticPropertyNames(VM& vm, PropertyNa
             continue;
 
         for (auto iter = table->begin(); iter != table->end(); ++iter) {
-            if (mode == DontEnumPropertiesMode::Include || !(iter->attributes() & PropertyAttribute::DontEnum))
-                propertyNames.add(Identifier::fromLatin1(vm, iter.key()));
+            if (mode == DontEnumPropertiesMode::Include || !(iter->attributes() & PropertyAttribute::DontEnum)) {
+                auto identifier = Identifier::fromLatin1(vm, iter.key());
+                // If the structure is shadowing the static property use it's attributes to determine if
+                // the property name is enumerable but add it here to preserve the right property order.
+                unsigned structureAttributes;
+                if (isValidOffset(structure->get(vm, identifier, structureAttributes)) && (mode == DontEnumPropertiesMode::Exclude && (structureAttributes & PropertyAttribute::DontEnum)))
+                    continue;
+                propertyNames.add(identifier);
+            }
         }
     }
 }
